--- a/results/index.html
+++ b/results/index.html
@@ -16,5 +16,34 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 <body>
 <h1>Wooster Trading Systems</h1>
 <p>This is just a landing page for the site that hosts results. Learn more on Twitter at https://twitter.com/PreritDas.</p>
+
+<p>View system results. Enter the system name, ex. Wooster Two or Wooster ThirtyThree.</p>
+<input type="text" id="systemID"><br><br>
+
+<button id="stats" name="stats" type="submit" onclick="statsPage()">Performance Metrics</button>
+<button id="plot" name="plot" type="submit" onclick="plotPage()">Interactive Plot</button>
+
+<script>
+function statsPage() {
+  var id = document.getElementById("systemID").value;
+  id = id.toLowerCase()
+    .split(' ')
+    .map((s) => s.charAt(0).toUpperCase() + s.substring(1))
+    .join(' ')
+    .trim();
+  window.open(`https://wooster.preritdas.com/stats/${id}`);
+}
+
+function plotPage() {
+  var id = document.getElementById("systemID").value;
+  id = id.toLowerCase()
+    .split(' ')
+    .map((s) => s.charAt(0).toUpperCase() + s.substring(1))
+    .join(' ')
+    .trim();
+  window.open(`https://wooster.preritdas.com/plots/${id}.html`);
+}
+</script>
+
 </body>
 </html>
