Add .html suffix to stats file names.

--- a/results/index.html
+++ b/results/index.html
@@ -31,7 +31,7 @@ function statsPage() {
     .map((s) => s.charAt(0).toUpperCase() + s.substring(1))
     .join(' ')
     .trim();
-  window.open(`https://wooster.preritdas.com/stats/${id}`);
+  window.open(`https://wooster.preritdas.com/stats/${id}.html`);
 }
 
 function plotPage() {
