Add note on out-of-sample backtesting.

--- a/results/index.html
+++ b/results/index.html
@@ -49,6 +49,10 @@ function plotPage(label) {
 }
 </script>
 
+<p>Each strategy is tested against out-of-sample data from a variety of market conditions: uptrend, downtrend, and chop. A strategy should _not_ be judged based on its performance on in-sample training data---that which it was optimized for. Wooster systems are optimized on in-sample data (obviously) but are then tested against out-of-sample market data in the conditions specified above. These are what are used to evaluate results and key performance metrics.</p>
+
+<p>Note: Wooster Two had 23 million optimization configurations. It is still processing, despite drastic changes in file structuring (to support backtesting of out-of-sample data belonging to several market conditions). Therefore, links for Wooster Two are broken, as the programmed links below have been updated for the new structure. Wooster One's file structure is compliant, however due to a temporary data API issue, the out-of-sample conditional tests are random, rather than the correct conditions (see the note above).</p>
+
 <h2>Philosophy</h2>
 
 <p>
