Add favicon to Wooster One stats sheet.

--- a/results/stats/Wooster One.html
+++ b/results/stats/Wooster One.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="UTF-8">
+		<link rel="icon" href="favicon.PNG">
 		<title>Wooster One Performance Metrics</title>
 <style>
 .r1 {color: #00ff00; text-decoration-color: #00ff00}
