--- a/results/index.html
+++ b/results/index.html
@@ -22,10 +22,10 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 <input type="text" id="systemID"><br><br>
 
 <button id="stats" name="stats" type="submit" onclick="statsPage()">Performance Metrics</button> <br><br>
-<button id="plot" name="plot-train" type="submit" onclick="plotPage('Train')">In-Sample Training Results</button>
-<button id="plot" name="plot-up" type="submit" onclick="plotPage('Up')">Out-of-Sample Uptrend Results</button>
-<button id="plot" name="plot-down" type="submit" onclick="plotPage('Down')">Out-of-Sample Downtrend Results</button>
-<button id="plot" name="plot-chop" type="submit" onclick="plotPage('Chop')">Out-of-Sample Chop Results</button>
+<button id="plot" name="plot-train" type="submit" onclick="plotPage('train')">In-Sample Training Results</button>
+<button id="plot" name="plot-up" type="submit" onclick="plotPage('up')">Out-of-Sample Uptrend Results</button>
+<button id="plot" name="plot-down" type="submit" onclick="plotPage('down')">Out-of-Sample Downtrend Results</button>
+<button id="plot" name="plot-chop" type="submit" onclick="plotPage('chop')">Out-of-Sample Chop Results</button>
 
 <script>
 function statsPage() {
