--- a/results/index.html
+++ b/results/index.html
@@ -10,7 +10,7 @@
 <body>
 <h1>Wooster Trading Systems</h1>
 
-<p>This is just a landing page for the site that hosts system statistics and results. More info to come. For now, follow updates on <a href="https://twitter.com/PreritDas">Twitter</a>.</p>
+<p>This is just a landing page for the site that hosts system statistics and results. See the <a href="https://woosterinfo.preritdas.com">project info homepage</a>, or follow updates on <a href="https://twitter.com/PreritDas">Twitter</a>.</p>
 
 <p>View system results. Enter the system name, ex. Wooster One or Wooster ThirtyTwo. If you get a 404 page, barring other errors, the strategy you queried doesn&#39;t yet exist.</p>
 
