Updated renders after stats sheet style changes.

--- a/results/stats/wooster four.html
+++ b/results/stats/wooster four.html
@@ -5,7 +5,7 @@
 		<title>Wooster Four Performance Metrics</title>
 <style>
 .r1 {color: #00ff00; text-decoration-color: #00ff00}
-.r2 {font-style: italic}
+.r2 {color: #800000; text-decoration-color: #800000}
 .r3 {color: #7f7f7f; text-decoration-color: #7f7f7f}
 .r4 {font-weight: bold}
 .r5 {color: #7f7f7f; text-decoration-color: #7f7f7f; font-weight: bold}
@@ -20,9 +20,9 @@ body {
 <body>
     <code>
         <pre style="font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace">
-<span class="r1">────────────────────────────────────────────── </span>In-Sample Training Results<span class="r1"> ──────────────────────────────────────────────</span>
+<span class="r1">─────────────────────────────────────── </span><span class="r2">Wooster Four</span> In-Sample Training Results<span class="r1"> ────────────────────────────────────────</span>
 
-             <span class="r2">         Preferred Performance Metrics          </span><span class="r3">        Secondary Performance Metrics         </span>             
+                      Preferred Performance Metrics          <span class="r3">        Secondary Performance Metrics         </span>             
              <span class="r3">┏━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━┓</span>             
              <span class="r3">┃</span><span class="r4"> Metric                 </span><span class="r3">┃</span><span class="r4"> Value               </span><span class="r3">┃┃</span><span class="r4"> </span><span class="r5">Metric                </span><span class="r4"> </span><span class="r3">┃</span><span class="r4"> </span><span class="r5">Value            </span><span class="r4"> </span><span class="r3">┃</span>             
              <span class="r3">┡━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━┩┡━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━┩</span>             
@@ -44,9 +44,9 @@ body {
                                                              <span class="r3">└────────────────────────┴───────────────────┘</span>             
 
 
-<span class="r1">──────────────────────────────────────────── </span>Out-of-Sample Uptrend Results<span class="r1"> ─────────────────────────────────────────────</span>
+<span class="r1">────────────────────────────────────── </span><span class="r2">Wooster Four</span> Out-of-Sample Uptrend Results<span class="r1"> ──────────────────────────────────────</span>
 
-             <span class="r2">         Preferred Performance Metrics          </span><span class="r3">        Secondary Performance Metrics         </span>             
+                      Preferred Performance Metrics          <span class="r3">        Secondary Performance Metrics         </span>             
              <span class="r3">┏━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━┓</span>             
              <span class="r3">┃</span><span class="r4"> Metric                 </span><span class="r3">┃</span><span class="r4"> Value               </span><span class="r3">┃┃</span><span class="r4"> </span><span class="r5">Metric                </span><span class="r4"> </span><span class="r3">┃</span><span class="r4"> </span><span class="r5">Value            </span><span class="r4"> </span><span class="r3">┃</span>             
              <span class="r3">┡━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━┩┡━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━┩</span>             
@@ -68,9 +68,9 @@ body {
                                                              <span class="r3">└────────────────────────┴───────────────────┘</span>             
 
 
-<span class="r1">─────────────────────────────────────────── </span>Out-of-Sample Downtrend Results<span class="r1"> ────────────────────────────────────────────</span>
+<span class="r1">───────────────────────────────────── </span><span class="r2">Wooster Four</span> Out-of-Sample Downtrend Results<span class="r1"> ─────────────────────────────────────</span>
 
-             <span class="r2">         Preferred Performance Metrics          </span><span class="r3">        Secondary Performance Metrics         </span>             
+                      Preferred Performance Metrics          <span class="r3">        Secondary Performance Metrics         </span>             
              <span class="r3">┏━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━┓</span>             
              <span class="r3">┃</span><span class="r4"> Metric                 </span><span class="r3">┃</span><span class="r4"> Value               </span><span class="r3">┃┃</span><span class="r4"> </span><span class="r5">Metric                </span><span class="r4"> </span><span class="r3">┃</span><span class="r4"> </span><span class="r5">Value            </span><span class="r4"> </span><span class="r3">┃</span>             
              <span class="r3">┡━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━┩┡━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━┩</span>             
@@ -92,9 +92,9 @@ body {
                                                              <span class="r3">└────────────────────────┴───────────────────┘</span>             
 
 
-<span class="r1">────────────────────────────────────────────── </span>Out-of-Sample Chop Results<span class="r1"> ──────────────────────────────────────────────</span>
+<span class="r1">─────────────────────────────────────── </span><span class="r2">Wooster Four</span> Out-of-Sample Chop Results<span class="r1"> ────────────────────────────────────────</span>
 
-             <span class="r2">         Preferred Performance Metrics          </span><span class="r3">        Secondary Performance Metrics         </span>             
+                      Preferred Performance Metrics          <span class="r3">        Secondary Performance Metrics         </span>             
              <span class="r3">┏━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━┓</span>             
              <span class="r3">┃</span><span class="r4"> Metric                 </span><span class="r3">┃</span><span class="r4"> Value               </span><span class="r3">┃┃</span><span class="r4"> </span><span class="r5">Metric                </span><span class="r4"> </span><span class="r3">┃</span><span class="r4"> </span><span class="r5">Value            </span><span class="r4"> </span><span class="r3">┃</span>             
              <span class="r3">┡━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━┩┡━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━┩</span>             
